--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/cypress-io/cypress-test-tiny.git"
+  },
+  "dependencies": {
+    "cypress": "^8.2.0",
+    "cypress-file-upload": "^5.0.8"
   }
 }
